--- a/baby-monitor-ui/src/index.css
+++ b/baby-monitor-ui/src/index.css
@@ -1,26 +1,47 @@
 body {
     font-family: sans-serif;
-    padding: 20px;
+    padding: 1em;
 }
 
-video {
-    width: 90%;
-    max-width: 500px;
-    margin: 10px 0;
-    border: 2px solid #444;
-    border-radius: 8px;
+.container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 90vh;
 }
 
-button {
-    margin: 10px;
-    padding: 10px 15px;
+.text-info {
+    margin: 1.5em 0em;
+    padding: 0;
+    font-size: auto;
+    overflow: hidden;
+    white-space: nowrap;
+}
+
+.video {
+    width: 100%;
+    max-width: 720px;
+    min-height: 320px;
+    margin: 0;
+    padding: 0;
+    border: 2px solid gray;
+    border-radius: 1em;
+}
+
+.button {
+    margin: 1.6em;
+    padding: 1em;
     border: 2px solid white;
-    border-radius: 10px;
+    border-radius: 0.6em;
     background: #007bff;
     color: white;
+    font-size: large;
+    font-weight: 500;
     cursor: pointer;
 }
 
-button:hover {
+.button:hover {
     background: #0056b3;
 }
