--- a/baby-monitor-ui/src/index.css
+++ b/baby-monitor-ui/src/index.css
@@ -13,19 +13,17 @@ body {
 }
 
 .text-info {
-    margin: 1.5em 0em;
+    margin: 1.5em 0.5em;
     padding: 0;
     font-size: auto;
-    overflow: hidden;
-    white-space: nowrap;
 }
 
 .video {
     width: 100%;
-    max-width: 720px;
-    min-height: 320px;
-    margin: 0;
-    padding: 0;
+    max-width: 640px;
+    height: auto;
+    margin: 0em 1em;
+    padding: 0em;
     border: 2px solid gray;
     border-radius: 1em;
 }
@@ -37,7 +35,7 @@ body {
     border-radius: 0.6em;
     background: #007bff;
     color: white;
-    font-size: large;
+    font-size: medium;
     font-weight: 500;
     cursor: pointer;
 }
