--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
 body {
     font-family: sans-serif;
-    padding: 1em;
+    background-color: #333;
+    color: white;
 }
 
 .container {
@@ -13,26 +14,27 @@ body {
 }
 
 .text-info {
-    margin: 1.5em 0.5em;
+    margin: 0em 0.5em;
     padding: 0;
-    font-size: auto;
+    font-size: larger;
 }
 
 .video {
-    width: 100%;
-    max-width: 640px;
+    width: auto;
     height: auto;
-    margin: 0em 1em;
+    max-width: 90vw;
+    max-height: 66vh;
+    margin: 2.5em 1em;
     padding: 0em;
-    border: 2px solid gray;
-    border-radius: 1em;
+    border: 2px solid white;
+    border-radius: 0.5em;
 }
 
 .button {
-    margin: 1.6em;
+    margin: 0em 0.5em;
     padding: 1em;
     border: 2px solid white;
-    border-radius: 0.6em;
+    border-radius: 0.5em;
     background: #007bff;
     color: white;
     font-size: medium;
