--- a/src/index.css
+++ b/src/index.css
@@ -15,8 +15,15 @@ body {
 
 .text-info {
     margin: 0em 0.5em;
+    margin-top: 0.5em;
     padding: 0;
     font-size: larger;
+}
+
+.status-info {
+    margin: 1.25em 0.5em;
+    padding: 0.5em;
+    font-size: large;
 }
 
 .video {
